# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import charactersRouter from "./characters";
+import fightsRouter from "./fights";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(charactersRouter);
+router.use(fightsRouter);
 
 export default router;
